# piano-learning-stream

./: .gitignore  README.md  infer-extreme.py  infer.py  infer.sh  process-mid-files.sh  run.py  temp.py  temp2.py  train.sh
cpp-piano-learning-cnn-data-provider/: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  setup.py
cpp-piano-learning-cnn-data-provider/conda.recipe/: meta.yaml
cpp-piano-learning-cnn-data-provider/docs/: cmake_example.rst
cpp-piano-learning-cnn-data-provider/src/: main.cpp  stream.cpp
cpp-piano-learning-cnn-data-provider/src/helpers/: filesAndFolders.cpp  filesAndFolders.h  streamHelpers.h
scripts/: MidiConvertWrapperAdvanced.js  infer-extreme.py  infer.py  process-mid-files.sh  sync-with-aws.sh  train.py
scripts/nn/: nn.py
